@@ -530,9 +530,9 @@ enum {
 #define BX_ATA_DEVICE_DISK       1
 #define BX_ATA_DEVICE_CDROM      2
 
-#define BX_ATA_BIOSDETECT_NONE   0
-#define BX_ATA_BIOSDETECT_AUTO   1
-#define BX_ATA_BIOSDETECT_CMOS   2
+#define BX_ATA_BIOSDETECT_AUTO   0
+#define BX_ATA_BIOSDETECT_CMOS   1
+#define BX_ATA_BIOSDETECT_NONE   2
 
 enum {
   BX_ATA_TRANSLATION_NONE,
